--- a/App1/Views/FavoritesPage.xaml
+++ b/App1/Views/FavoritesPage.xaml
@@ -5,11 +5,39 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="App1.Views.FavoritesPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Favorites"/>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Favorites Books List"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <CollectionView x:Name="myCollectionView"
+                            SelectionMode="Single"
+                            Margin="20,5,20,0"
+                            >
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid RowSpacing="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="20"/>
+                            </Grid.ColumnDefinitions>
+                            <Label Text="{Binding Id}"
+                                Grid.Row="0" Grid.RowSpan="2"
+                                HorizontalOptions="CenterAndExpand"
+                                VerticalOptions="CenterAndExpand"/>
+                            <Label Text="{Binding Name}"
+                                   Grid.Row="0" Grid.Column="1"
+                                   VerticalOptions="CenterAndExpand"
+                                   FontSize="20"
+                                   FontAttributes="Bold"/>
+                            <Label Text="{Binding Author}"
+                                   Grid.Row="1" Grid.Column="1"/>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
