--- a/App1/Views/ProfilePage.xaml
+++ b/App1/Views/ProfilePage.xaml
@@ -7,6 +7,24 @@
              x:Class="App1.Views.ProfilePage">
     <ContentPage.Content>
         <StackLayout>
+            <Grid Margin="20,0,20,0" RowSpacing="5" VerticalOptions="CenterAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <StackLayout Grid.Row="0">
+                    <Entry Placeholder="UserName" FontSize="16" x:Name="EntryUserName"/>
+                </StackLayout>
+                <StackLayout Grid.Row="1">
+                    <Entry Placeholder="Email" FontSize="16" x:Name="EntryUseEmail"/>
+                </StackLayout>
+                <StackLayout Grid.Row="2">
+                    <Entry Placeholder="PhoneNumber" FontSize="16" x:Name="EntryUserPhoneNumber"/>
+                </StackLayout>
+             
+            </Grid>
             <Button Text="Insert Book" Clicked="insertNewBook"/>
             <Button Text="Saved Books" Clicked="seeSavedBooks"/>
         </StackLayout>
